<resources>
    <string name="app_name">Meal Manager</string>

    <!-- Strings related to login/register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_email_exists">A user with this email already exists</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_register">Register</string>
    <string name="title_activity_registration">Register</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="register_name">Full Name</string>

    <!-- Strings related to tasks -->
    <string name="view_shopping_list">View Shopping List</string>
    <string name="dine_in">Dine In</string>
    <string name="dine_out">Dine Out</string>
    <string name="empty_list">Nothing matches your search!</string>
    <string name="add_recipe">Create Recipe</string>

    <!-- String related to menu -->
    <string name="menu_item_log_out">Log Out</string>
    <string name="menu_search">Search</string>
    <string name="prompt_search">Search</string>
    <string name="action_bar_name_radio_button">Name</string>
    <string name="action_bar_type_radio_button">Type</string>
    <string name="action_bar_remove_all_from_shopping_list">Remove All</string>

    <!-- Strings related to Recipes -->
    <string name="add_to_shopping_list">Add to Shopping List</string>
    <string name="like">Like</string>
    <string name="favorite_recipes">Favorite Recipes</string>

    <!-- Strings related to restaurants -->
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="see_reviews">Reviews</string>
    <string name="see_reviews_no_reviews">There aren\'t any reviews for this restaurant!</string>
    <string name="leave_review">Leave a Review</string>
    <string name="post_review">Post Review</string>
    <string name="enter_your_review_here">Enter your Review Here</string>

    <!-- strings related to adding recipe -->
    <string name="enter_directions_here">Enter cooking instructions here</string>
    <string name="add_ingr">Add Ingredients</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="total_time_min">Total time (minutes)</string>
    <string name="add_recipe_vegan">Vegan</string>
    <string name="add_recipe_dairy_free">Dairy-Free</string>
    <string name="add_recipe_vegetarian">Vegetarian</string>
    <string name="add_recipe_gluten_free">Gluten-Free</string>
    <string name="prompt_ingr_search">Search Ingredient Name</string>
    <string name="add_recipe_create_new_ingredient">Create New Ingredient</string>
    <string-array name="add_recipe_types">
        <item>American</item>
        <item>Italian</item>
        <item>Thai</item>
        <item>German</item>
        <item>Indian</item>
        <item>Japanese</item>
        <item>Chinese</item>
        <item>Mexican</item>
        <item>Other</item>
    </string-array>


    <!-- search string arrays -->
    <string-array name="search_type_array_dine_in">
        <item>Name</item>
        <item>Type</item>
    </string-array>
    <string-array name="search_type_array_dine_out">
        <item>Name</item>
        <item>Type</item>
        <item>Nearby</item>
    </string-array>

</resources>
