<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.csse333.mealmanager.PostReviewActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_editText"
        android:hint="@string/recipe_name"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@android:color/secondary_text_light"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="20sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/type_spinner"
        android:entries="@array/add_recipe_types"
        android:textColor="@color/textColor"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/total_time_min"
            android:id="@+id/textView"
            android:labelFor="@+id/minutes_editText"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/minutes_editText"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/secondary_text_light"
            android:textColorHint="@android:color/secondary_text_light" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe_vegan"
            android:id="@+id/vegan_checkBox" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe_dairy_free"
            android:id="@+id/dairy_checkBox" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe_vegetarian"
            android:id="@+id/vegetarian_checkBox" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe_gluten_free"
            android:id="@+id/gluten_checkBox" />

    </GridLayout>

    <EditText
        android:id="@+id/cooking_instr_editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/enter_directions_here"
        android:inputType="textMultiLine"
        android:textColor="@android:color/secondary_text_light"
        android:textColorHint="@android:color/secondary_text_light" />

    <Button
        android:id="@+id/add_ingr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_ingr"/>
</LinearLayout>
